fix: NPE 오류 해결